# coffeetracker-monorepo

./: .env  .gitignore  Dockerfile  Makefile  README.md  buildspec.yml  compose.yaml  index.html  main.tf  package-lock.json  package.json  shell.nix  tsconfig.json  variables.tf  vite.config.ts
coffeetracker_backend/infrastructure/: main.tf  variables.tf
coffeetracker_backend/lambdas/: Dockerfile
coffeetracker_backend/lambdas/get-all/: Cargo.toml
coffeetracker_backend/lambdas/shared/: Cargo.toml
coffeetracker_backend/lambdas/shared/src/models/: dto.rs  mod.rs
coffeetracker_frontend/: Dockerfile  compose.yaml  package-lock.json  package.json
coffeetracker_frontend/infrastructure/: main.tf
coffeetracker_frontend/src/: App.tsx  base-container.tsx  error-page.tsx  router.tsx
deploy/: 00-variables.tf  01-main.tf  02-amplify.tf  02-s3.tf  02-s3.tf.bak  03-codepipeline.tf  04-codepipeline-role.tf  05-codebuild.tf  06-codebuild-role.tf  07-dynamo-db.tf  08-api-gateway.tf  09-lambdas.tf  10-lambda-permissions.tf  11-cognito.tf  12-acm.tf  14-route53.tf.bak  Makefile  output.tf
deploy/api/: openapi.yaml
environments/dev/: backend.config
src/: App.test.tsx  App.tsx  index.css  main.tsx  router.tsx
src/app/: store.ts
src/app/api/: api.ts
src/components/: base-container.tsx  date-picker.tsx  loading-spinner.tsx  loadingSpinner.tsx  mode-toggle.tsx  theme-provider.tsx
src/lib/: BasicAuth.tsx  LOGINS.ts  ProtectedRoute.tsx
src/pages/: coffee-data-table.tsx  dashboard.tsx  error.tsx  espresso-shot-form.tsx  login.tsx
src/test/: dummyData.tsx  worker.ts
(+43 files in other folders)
