[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Tapps"]
resolver = "2"

[lib]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"

serde_json = "1"
aws-config = { features = ["behavior-version-latest"], version = "1.0.1" }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-dynamodb = "1.2.0"
tracing = "0.1.40"
aws_lambda_events = { version = "0.15.1", default-features = false, features = [
  "apigw",
] }
chrono = "0.4.38"
svix-ksuid = "0.8.0"
